parser/tests/parser/complex/invalid/declaration_recovery_1.mf2
.foo $var %.local $hello = {world}
{{}}
=== spans ===
                    .foo $var %.local $hello = {world}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LocalDeclaration               ^^^^^^^^^^^^^^^^^^^^^^^
Variable                              ^^^^^^
LiteralExpression                              ^^^^^^^
Text                                            ^^^^^
QuotedPattern                                          ^^^^
Pattern             
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..11)
  .foo $var %.local $hello = {world}↵{{}}
  ^^^^^^^^^^^
=== ast ===
ComplexMessage {
    span: @0..39,
    declarations: [
        LocalDeclaration {
            start: @11,
            variable: Variable {
                span: @18..24,
                name: "hello",
            },
            expression: LiteralExpression {
                span: @27..34,
                literal: Text {
                    start: @28,
                    content: "world",
                },
                annotation: None,
                attributes: [],
            },
        },
    ],
    body: QuotedPattern {
        span: @35..39,
        pattern: Pattern {
            parts: [],
        },
    },
}